# iflyconvert2

./: .gitignore  ControlsToMap.CSV  Readme.md  SDK.h  SDK_Defines.h  controls.md  ifly737_conversion_progress.md  iflymax8lvars-vcs.txt  update.md
.github/: copilot-instructions.md
737MAX_SDK/: 737MAX_SDK.cpp  737MAX_SDK.h  737MAX_SDK.sln  737MAX_SDK.vcxproj  737MAX_SDK.vcxproj.filters  737MAX_SDKDlg.cpp  737MAX_SDKDlg.h  My737MAXSDK.aps  My737MAXSDK.rc  resource.h
737MAX_SDK/res/: My737MAXSDK.rc2
737MAX_SDK/sdk/: SDK_Defines.h  key_command.h
dll/: CMakeLists.txt  README.md  build_dll.bat  iflycli_dll.cpp  iflycli_dll.exp  iflycli_dll.h  iflycli_dll.lib
fsuipc/: iflycli_sample.lua
ifly_cli/: CMakeLists.txt  Makefile  PROJECT_SUMMARY.md  README.md  build.bat  build.ps1  build_direct.bat  demo.bat  linenoise.cpp  main.cpp
ifly_cli/commands/: air_systems.cpp  annunciators.cpp  anti_ice.cpp  apu.cpp  automatic_flight.cpp  command_info.h  communication.cpp  electrical.cpp  engapu.cpp  fire.cpp  fltctrl.cpp  fms.cpp  fuel.cpp  gear.cpp  general.cpp  hydraulic.cpp  instrument.cpp  lights.cpp  warning.cpp
resources/: 737max8-sim variables.txt  ifly737events.txt  pmdg737events.txt
resources/pmdg737/Overhead - AC DC Metering Panel with working Galley/: logic.lua
resources/pmdg737/Overhead - APU and Engine Start Switch/: logic.lua
resources/pmdg737/Overhead - Anti-Ice/: logic.lua
resources/pmdg737/Overhead - Bleed Switches/: logic.lua
resources/pmdg737/Overhead - Cabin Altitude Panel/: logic.lua
siff/: ifly737max8oh.siff
(+17 files in other folders)
